--- a/playlist.html
+++ b/playlist.html
@@ -9,14 +9,17 @@
     <script src="https://code.iconify.design/2/2.0.3/iconify.min.js"></script>
 
 
-
 </head>
 <style>
     h2 {
-        font-size: 18px;
+        font-size: 14px;
         font-weight: 300;
         color: black;
         text-transform: capitalize;
+        padding: 0px;
+        line-height: 30%
+
+
     }
 
     table {
@@ -25,27 +28,33 @@
     }
 
     th {
-        font-size: 18px;
+        font-size: 14px;
         font-weight: lighter;
         padding: 10px;
     }
 
     td {
-        font-size: 16px;
+        font-size: 14px;
         font-weight: 100;
         color: grey;
+        padding: 0px
     }
 
     .img-playlist {
-        width: 50px;
-        height: 50px;
+        width: 40px;
+        height: 40px;
         border-radius: 20%;
-        padding: 20px;
+        padding: 15px;
     }
+
     p::after {
         content: " ..."
     }
-    .icon{
+p{
+    line-height: 20%
+
+}
+    .icon {
         margin-left: 20px;
     }
 
@@ -59,37 +68,43 @@
         <td><img class="img-playlist" src="img/5139382.jpg" height="1108" width="1124"/></td>
         <td><h2>spaced out</h2>
             <p>Khalil wakes Up and find</p></td>
-        <td><span class="iconify icon" data-icon="akar-icons:two-line-horizontal" style="color: #9e9e9e; width: 40px; height: 40px"></span></td>
+        <td><span class="iconify icon" data-icon="akar-icons:two-line-horizontal"
+                  style="color: #9e9e9e; width: 30px; height: 30px"></span></td>
     </tr>
     <tr>
         <td><img class="img-playlist" src="img/house_in_the_clouds_by_true_wubus_db5j5qf-fullview.jpg"/></td>
         <td><h2>House in the clouds</h2>
             <p>Janathan creates a new world</p></td>
-        <td><span class="iconify icon" data-icon="akar-icons:two-line-horizontal" style="color: #9e9e9e; width: 40px; height: 40px"></td>
+        <td><span class="iconify icon" data-icon="akar-icons:two-line-horizontal"
+                  style="color: #9e9e9e; width: 30px; height: 30px"></td>
     </tr>
     <tr>
         <td><img class="img-playlist" src="img/LightUptheNight-teaser-1100x733.jpg"/></td>
         <td><h2>Lighing up the night</h2>
             <p>Jose brings fireworks to the</p></td>
-        <td><span class="iconify icon" data-icon="akar-icons:two-line-horizontal" style="color: #9e9e9e; width: 40px; height: 40px"></td>
+        <td><span class="iconify icon" data-icon="akar-icons:two-line-horizontal"
+                  style="color: #9e9e9e; width: 30px; height: 30px"></td>
     </tr>
     <tr>
         <td><img class="img-playlist" src="img/getty_513124404_200012492000928072_353033.jpg"/></td>
         <td><h2>at the top</h2>
             <p>Cindy Climbs new height to relax </p></td>
-        <td><span class="iconify icon" data-icon="akar-icons:two-line-horizontal" style="color: #9e9e9e; width: 40px; height: 40px"></td>
+        <td><span class="iconify icon" data-icon="akar-icons:two-line-horizontal"
+                  style="color: #9e9e9e; width: 30px; height: 30px"></td>
     </tr>
     <tr>
         <td><img class="img-playlist" src="img/worlds-most-beautiful-libraries-7.jpg"/></td>
         <td><h2>between the library books</h2>
             <p>There is a new romance between</p></td>
-        <td><span class="iconify icon" data-icon="akar-icons:two-line-horizontal" style="color: #9e9e9e; width: 40px; height: 40px"></td>
+        <td><span class="iconify icon" data-icon="akar-icons:two-line-horizontal"
+                  style="color: #9e9e9e; width: 30px; height: 30px"></td>
     </tr>
     <tr>
         <td><img class="img-playlist" src="img/81lndYLpcaL._AC_UL1500_.jpg"/></td>
         <td><h2>whth sticks</h2>
             <p>Joe and lorenzo rebuild their</p></td>
-        <td><span class="iconify icon" data-icon="akar-icons:two-line-horizontal" style="color: #9e9e9e; width: 40px; height: 40px"></td>
+        <td><span class="iconify icon" data-icon="akar-icons:two-line-horizontal"
+                  style="color: #9e9e9e; width: 30px; height: 30px"></td>
     </tr>
 </table>
 </body>
